ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: hello-world.info 
    http:
      paths:
        - path: /apple
          pathType: Exact
          backend:
            service:
              name: apple-service
              port:
                number: 5678
        - path: /banana
          pathType: Exact
          backend:
            service:
              name: banana-service
              port: 
                number: 5678
        - path: /dtm
          pathType: Prefix
          backend:
            service:
              name: dtm-svc 
              port:
                number: 36789
  ingressClassName: nginx
